syntax = "proto3";

package bot;

// Platform enum matching the Rust Platform enum
enum Platform {
  PLATFORM_UNSPECIFIED = 0;
  QQ = 1;
  ENTERPRISE_WECHAT = 2;
  TELEGRAM = 3;
  DISCORD = 4;
  LLONEBOT = 5;
}

enum ContentType {
  CONTENT_TYPE_UNSPECIFIED = 0;
  TEXT = 1;
  IMAGE = 2;
  VIDEO = 3;
  FILE = 4;
}

// P-3: Typed enum replacing the previous free-form command_type string.
// Adding a new variant requires updating both sides, making
// exhaustiveness failures visible at compile time.
enum CommandType {
  COMMAND_TYPE_UNSPECIFIED = 0;
  SEND_MESSAGE = 1; // Backend instructs frontend to push a message
  SHUTDOWN = 2; // Graceful shutdown request
  GET_STATUS = 3; // Request frontend to report current status
}

// Unified message structure for cross-platform communication
message UnifiedMessage {
  string event_id = 1; // UUID as string
  string content = 2;
  Platform platform = 3;
  int64 timestamp = 4; // Unix timestamp in seconds
  map<string, string> metadata = 5; // Additional metadata
}

// Response for message operations
message MessageResponse {
  bool success = 1;
  string message = 2;
  string message_id = 3; // Backend-assigned message ID
  ContentType content_type = 4; // Type of the content
}

// P-4: Structured payload for SEND_MESSAGE commands.
// Replaces the previous untyped map<string, string> parameters field.
message SendMessagePayload {
  string target_openid = 1; // Target group / user openid
  string content = 2; // Message body text, or file:///path for images
  ContentType content_type = 3;
}

// Command from backend to frontend
message BotCommand {
  string command_id = 1;
  CommandType command_type = 2; // P-3: was string, now typed enum
  reserved 3;                     // P-4: previously map<string, string> parameters
  reserved "parameters";
  int64 timestamp = 4;

  // P-4: Structured per-command payload. Only the variant that matches
  // command_type should be populated; other fields are ignored by receivers.
  oneof payload {
    SendMessagePayload send_message = 10;
  }
}

// Task subscription request
message SubscribeRequest {
  string frontend_id = 1; // Unique identifier for this frontend instance
  repeated Platform platforms = 2; // Platforms this frontend handles
}

// Heartbeat message
message HeartbeatRequest {
  string frontend_id = 1;
  int64 timestamp = 2;
  map<string, string> status = 3; // Health status info
}

message HeartbeatResponse {
  bool healthy = 1;
  string message = 2;
}

// Bot backend service definition
service BotBackend {
  // Frontend reports incoming message to backend
  rpc ReportMessage(UnifiedMessage) returns (MessageResponse);
  
  // Backend pushes commands to frontend (Server Streaming)
  rpc SubscribeCommands(SubscribeRequest) returns (stream BotCommand);
  
  // Heartbeat check
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
  
  // Bidirectional chat stream for real-time communication
  rpc BidirectionalChat(stream UnifiedMessage) returns (stream BotCommand);
}
